--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 ENV1=value_env1
 ENV2=value_env2
+PORT=3000
+JWT_ACCESS_TOKEN_SECRET=access-token-secret
+JWT_REFESH_TOKEN_SECRET=refesh-token-secret
